force-app/main/default/objects/Segment_Band__mdt/Segment_Band__mdt.object-meta.xml
<CustomObject>
    <description>BR-05/BR-10/BR-21. Governed segmentation configuration. Editable without deployment.</description>
    <label>Segment Band</label>
    <pluralLabel>Segment Bands</pluralLabel>
</CustomObject>