force-app/main/default/objects/Segment_Band__mdt/fields/ARR_Override_Min__c.field-meta.xml
<CustomField>
    <fullName>ARR_Override_Min__c</fullName>
    <description>ARR threshold that overrides the employee band for existing customers. Null until agreed.</description>
    <inlineHelpText>ARR threshold that overrides the employee band for existing customers. Null until agreed.</inlineHelpText>
    <label>ARR Override Min</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>