force-app/main/default/objects/Segment_Band__mdt/fields/Employee_Max__c.field-meta.xml
<CustomField>
    <fullName>Employee_Max__c</fullName>
    <description>Exclusive upper bound of the employee band.</description>
    <inlineHelpText>Exclusive upper bound of the employee band.</inlineHelpText>
    <label>Employee Max</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>