force-app/main/default/objects/Segment_Band__mdt/fields/Employee_Min__c.field-meta.xml
<CustomField>
    <fullName>Employee_Min__c</fullName>
    <description>Inclusive lower bound of the employee band.</description>
    <inlineHelpText>Inclusive lower bound of the employee band.</inlineHelpText>
    <label>Employee Min</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>