force-app/main/default/objects/Segment_Band__mdt/fields/MQL_Eligible__c.field-meta.xml
<CustomField>
    <fullName>MQL_Eligible__c</fullName>
    <description>BR-17, PD-14. Whether Leads in this segment may be qualified as MQL. SYNTHETIC BASELINE: the eligible set was authored for reproducible demonstration of lifecycle governance, not validated with a client. Lives here rather than in its own type because it is a property of the segment, and the segment is already defined once in this record. Unchecking withdraws a segment from marketing qualification without a deployment and without deleting the band.</description>
    <inlineHelpText>Whether this segment may be qualified as MQL.</inlineHelpText>
    <label>MQL Eligible</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>