force-app/main/default/objects/Segment_Band__mdt/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <description>Version recorded on records derived under this rule.</description>
    <inlineHelpText>Version recorded on records derived under this rule.</inlineHelpText>
    <label>Rule Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>