force-app/main/default/objects/Segment_Band__mdt/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <description>Segment this band defines.</description>
    <inlineHelpText>Segment this band defines.</inlineHelpText>
    <label>Segment Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>