force-app/main/default/objects/Segment_Band__mdt/fields/SLA_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Hours__c</fullName>
    <description>Response commitment in business hours. Set in the SLA increment.</description>
    <inlineHelpText>Response commitment in business hours. Set in the SLA increment.</inlineHelpText>
    <label>SLA Response Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>